Shira/force-app/main/default/objects/Documents__c/fields/DocNum__c.field-meta.xml
<CustomField>
    <fullName>DocNum__c</fullName>
    <label>מספר מסמך</label>
    <length>10</length>
    <type>Text</type>
</CustomField>