Shira/force-app/main/default/objects/Documents__c/fields/DocStatus__c.field-meta.xml
<CustomField>
    <fullName>DocStatus__c</fullName>
    <label>סטטוס מסמך</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>חדש</fullName>
            </value>
            <value>
                <fullName>בטיפול</fullName>
            </value>
            <value>
                <fullName>נדרשות השלמות</fullName>
            </value>
            <value>
                <fullName>אושר</fullName>
            </value>
            <value>
                <fullName>נדחה</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>