Shira/force-app/main/default/objects/Documents__c/fields/DocTypes__c.field-meta.xml
<CustomField>
    <fullName>DocTypes__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>סוג מסמך</label>
    <referenceTo>DocumentTypes__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>DocTypes</relationshipName>
    <type>Lookup</type>
</CustomField>