Shira/force-app/main/default/objects/Documents__c/fields/ProjectInDoc__c.field-meta.xml
<CustomField>
    <fullName>ProjectInDoc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>פרויקט</label>
    <referenceTo>Project__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>ProjectInDoc</relationshipName>
    <type>Lookup</type>
</CustomField>