Shira/force-app/main/default/objects/Documents__c/fields/RegulationsInDoc__c.field-meta.xml
<CustomField>
    <fullName>RegulationsInDoc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>תקנות</label>
    <referenceTo>Regulations__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>RegulationsInDoc</relationshipName>
    <type>Lookup</type>
</CustomField>