Shira/force-app/main/default/objects/Documents__c/fields/RelateDoc__c.field-meta.xml
<CustomField>
    <fullName>RelateDoc__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>מסמכים</label>
    <referenceTo>Documents__c</referenceTo>
    <relationshipLabel>Documents</relationshipLabel>
    <relationshipName>RelateDoc</relationshipName>
    <type>Lookup</type>
</CustomField>